--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,14 +59,14 @@ jobs:
           - aa: 0900
             board: tinkerboard
             desc: Tinkerboard, cli, edge
-            runnerLabel: can-build-arm64
+            runnerLabel: can-build-arm64-others
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0950
             board: helios4
             desc: Helios4, cli, edge
-            runnerLabel: can-build-arm64
+            runnerLabel: can-build-arm64-others
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
@@ -177,10 +177,18 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes"
 
+          # random stuff
+          - aa: 0700
+            board: pine64
+            desc: PINE64, cli, current
+            runnerLabel: can-build-arm64-others
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=current"
+
           - aa: 0800
             board: oneplus5
             desc: OnePlus 5, fastboot-compatible, cloud image, user-data at /boot
-            runnerLabel: can-build-arm64
+            runnerLabel: can-build-arm64-others
             runnerLabelKernel: can-build-small-kernels
             vars: "CLOUD_IMAGE=yes"
 
