--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,15 +40,37 @@ jobs:
         # aa: GH Actions orders the jobs by the first key value. 'aa' should be first. it never is. it is actually quite pointless trying. it's effectively random.
 
         include:
-          # e2img for oracle cloud
+          # desktop cinammon for uefi-arm64
           - aa: 0001
+            board: uefi-arm64
+            desc: UEFI Generic arm64, with -generic Ubuntu kernel (ddk), desktop cinammon
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-rootfs-only
+            vars: "CLOUD_IMAGE=no BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinammon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
+          - aa: 0002
+            board: uefi-arm64
+            desc: UEFI Generic arm64, with Armbian mainline kernel (current), desktop cinammon
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=current BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinammon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
+          - aa: 0003
+            board: uefi-arm64
+            desc: UEFI Generic arm64, with Armbian mainline kernel (edge), desktop cinammon
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinammon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
+          # e2img for oracle cloud
+          - aa: 0011
             board: uefi-arm64
             desc: UEFI Generic ARM64 Rescue e2img, edge, cloud image, user-data at /boot
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=uefi-rescue BRANCH=edge"
 
-          - aa: 0002
+          - aa: 0012
             board: uefi-arm64
             desc: UEFI Generic ARM64 Rescue e2img, ddk, cloud image, user-data at /boot
             runnerLabel: can-build-arm64
@@ -194,7 +216,7 @@ jobs:
 
           - aa: 0302
             board: uefi-x86
-            desc: UEFI Generic x86, with Armbian mainline kernel (edge), desktop
+            desc: UEFI Generic x86, with Armbian mainline kernel (edge), desktop xfce
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
