--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,27 +40,27 @@ jobs:
         # aa: GH Actions orders the jobs by the first key value. 'aa' should be first. it never is. it is actually quite pointless trying. it's effectively random.
 
         include:
-          # desktop cinammon for uefi-arm64
-          - aa: 0001
-            board: uefi-arm64
-            desc: UEFI Generic arm64, with -generic Ubuntu kernel (ddk), desktop cinnamon
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+          ## desktop cinammon for uefi-arm64
+          #- aa: 0001
+          #  board: uefi-arm64
+          #  desc: UEFI Generic arm64, with -generic Ubuntu kernel (ddk), desktop cinnamon
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-rootfs-only
+          #  vars: "CLOUD_IMAGE=no BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
-          - aa: 0002
-            board: uefi-arm64
-            desc: UEFI Generic arm64, with Armbian mainline kernel (current), desktop cinnamon
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+          #- aa: 0002
+          #  board: uefi-arm64
+          #  desc: UEFI Generic arm64, with Armbian mainline kernel (current), desktop cinnamon
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-kernels
+          #  vars: "CLOUD_IMAGE=no BRANCH=current BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
-          - aa: 0003
-            board: uefi-arm64
-            desc: UEFI Generic arm64, with Armbian mainline kernel (edge), desktop cinnamon
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+          #- aa: 0003
+          #  board: uefi-arm64
+          #  desc: UEFI Generic arm64, with Armbian mainline kernel (edge), desktop cinnamon
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-kernels
+          #  vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
           # e2img for oracle cloud
           - aa: 0011
