--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,12 +83,12 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=legacy"
 
-          - aa: 0013
-            board: lafrite
-            desc: lafrite, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
+          #- aa: 0013
+          #  board: lafrite
+          #  desc: lafrite, edge, regular CLI
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-kernels
+          #  vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           #          - aa: 0014
           #            board: lepotato
@@ -111,12 +111,12 @@ jobs:
           #            runnerLabelKernel: can-build-kernels
           #            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
-          - aa: 0017
-            board: odroidc2
-            desc: odroidc2, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
+          #- aa: 0017
+          #  board: odroidc2
+          #  desc: odroidc2, edge, regular CLI
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-kernels
+          #  vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           #          - aa: 0018
           #            board: t95z
@@ -132,12 +132,12 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
-          - aa: 0020
-            board: khadas-vim3l
-            desc: khadas-vim3l, current, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current"
+          #- aa: 0020
+          #  board: khadas-vim3l
+          #  desc: khadas-vim3l, current, regular CLI
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-kernels
+          #  vars: "CLOUD_IMAGE=no BRANCH=current"
 
           - aa: 0021
             board: khadas-vim3l
@@ -157,10 +157,10 @@ jobs:
 
           - aa: 0970
             board: odroidn2
-            desc: ODROID N2+, xfce desktop, current
+            desc: ODROID N2+, xfce desktop, edge
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+            vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
           # uefix-86 cloud
           - aa: 0100
@@ -192,12 +192,12 @@ jobs:
           #            runnerLabelKernel: can-build-rootfs-only
           #            vars: "CLOUD_IMAGE=no BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
-          - aa: 0206
-            board: rpi4b
-            desc: Raspberry Pi 4B, edge, desktop cinnamon
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+          #- aa: 0206
+          #  board: rpi4b
+          #  desc: Raspberry Pi 4B, edge, desktop cinnamon
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-kernels
+          #  vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
           #          - aa: 0210
           #            board: rpi4b
@@ -220,12 +220,12 @@ jobs:
           #            runnerLabelKernel: can-build-rootfs-only
           #            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
-          - aa: 0302
-            board: uefi-x86
-            desc: UEFI Generic x86, with Armbian mainline kernel (edge), desktop xfce
-            runnerLabel: can-build-x86-huge # huge image, vmware too, kernel built.
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+          ## HUGE ## - aa: 0302
+          ## HUGE ##   board: uefi-x86
+          ## HUGE ##   desc: UEFI Generic x86, with Armbian mainline kernel (edge), desktop xfce
+          ## HUGE ##   runnerLabel: can-build-x86-huge # huge image, vmware too, kernel built.
+          ## HUGE ##   runnerLabelKernel: can-build-kernels
+          ## HUGE ##   vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
           # - aa: 0310
           #   board: uefi-x86
@@ -249,12 +249,12 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes"
 
-          - aa: 0550
-            board: odroidn2
-            desc: ODROID N2+, cloud image, user-data at /boot (ext4)
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes"
+          #- aa: 0550
+          #  board: odroidn2
+          #  desc: ODROID N2+, cloud image, user-data at /boot (ext4)
+          #  runnerLabel: can-build-arm64
+          #  runnerLabelKernel: can-build-kernels
+          #  vars: "CLOUD_IMAGE=yes"
 
           # random stuff
           - aa: 0700
